Introduction Page finished.

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -1,5 +1,5 @@
 * {
-    font-family: consolas;
+    font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
     overflow: hidden;
@@ -8,3 +8,12 @@
         display: none;
     }
 }
+
+button {
+    background: none;
+    border: 2px solid;
+    font: inherit;
+    line-height: 1;
+    padding: 30px 40px;
+    outline: none;
+  }
